...
    <string name="bluereaderuglystate">The blueReader was found in an ugly state! It will be now turn off now, and you turn it back to on (short press of the button). After that the blueReader should work as expected!</string>
    <string name="offical_msg">The official app</string>
    <string name="aggressive_power_manager">Your device has an aggressive power management app. Normally accessed via system settings. Please make sure xDrip is excluded from background restrictions.</string>
    <string name="use_conflict_msg">may try to access the transmitter device too and this can cause problems with both apps</string>
    <string name="use_confict_msg_glimp">You can adjust Glimp Settings: options -> devices -> unselect Bluetooth option</string>
    <string name="eng_mode_is_on">Engineering mode is enabled.  Please disable it unless you are certain you need it as it may cause unexpected behavior.</string>
    <string name="yes">Yes</string>
    <string name="enable">Enable</string>
    <string name="xdrip_compatible_features">xDrip %s Features</string>
    <string name="garmin">Garmin</string>
    <string name="fitbit">Fitbit</string>
    <string name="enable_local_web_server_feature">Enable local web server feature for Garmin watchface?</string>
    <string name="enable_local_web_server_feature_fitbit">Enable local web server feature for Fitbit watchface?</string>
...
