...
            supportingText = error?.let { { Text(it) } },
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Decimal),
            placeholder = { Text(context.getString(R.string.enter_blood_glucose_value)) },
            modifier = Modifier
                .fillMaxWidth()
                .padding(horizontal = 16.dp, vertical = 24.dp)
                .testTag("addcal_value"),
        )
        Button(
            onClick = { error = onDone(value) },
            modifier = Modifier
                .fillMaxWidth()
                .padding(horizontal = 16.dp)
                .testTag("addcal_done"),
        ) {
            Text(context.getString(R.string.done))
        }
    }
}

...
