...
        }
        Row(modifier = Modifier.fillMaxWidth().padding(top = 16.dp)) {
            Button(
                onClick = { viewModel.select(null, null) },
                modifier = Modifier
                    .align(Alignment.CenterVertically)
                    .testTag("glupro_scan_again"),
            ) {
                Text(context.getString(R.string.glupro_scan_again))
            }
        }
        Spacer(Modifier.height(16.dp))
        Spacer(Modifier.width(0.dp))
...
